--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-svg": "^15.1.15",
     "redux": "^4.2.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
